--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
               <transformers>
                 <transformer
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>net.openright.simpleserverseed.application.SeedAppServer
+                  <mainClass>net.openright.conferencer.application.ConferencerServer
                   </mainClass>
                 </transformer>
                 <transformer
