--- a/src/main/resources/webapp/WEB-INF/web.xml
+++ b/src/main/resources/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
 	<servlet>
 		<servlet-name>apiFrontServlet</servlet-name>
-		<servlet-class>net.openright.simpleserverseed.application.SeedAppFrontServlet</servlet-class>
+		<servlet-class>net.openright.conferencer.application.ConferencerFrontServlet</servlet-class>
 	</servlet>
 
 	<servlet-mapping>
